# infinitam_fpga

./: README.md
src/InfiniTAM/: .gitignore  CMakeLists.txt  README.md
src/InfiniTAM/Engine/: Android.mk  CLIEngine.cpp  CMakeLists.txt  IMUSourceEngine.h  NetworkEngine.cpp  NetworkEngine.h  TangoEngine.cpp  TangoEngine.h  UIEngine.cpp  UIEngine.h  logging.h
src/InfiniTAM/ITMLib/: .gitignore  Android.mk  CMakeLists.txt  ITMLib.h
src/InfiniTAM/ITMLib/Engine/: ITMCompositeStepTracker.h  ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMExportEngine.h  ITMExternalTracker.cpp  ITMExternalTracker.h  ITMIMUCalibrator.h  ITMIMUCalibrator_Tango.h  ITMIMUOnlyTracker.cpp  ITMIMUOnlyTracker.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMTrackingController.h
src/InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMVisualisationEngine.h
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMExportEngine_CPU.cpp  ITMExportEngine_CPU.h  ITMSceneReconstructionEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.h  ITMVisualisationEngine_CPU.cpp
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: CudaUtils.cu  CudaUtils.h  ITMCUDAUtils.h  ITMExportEngine_CUDA.cu  ITMExportEngine_CUDA.h  ITMVisualisationEngine_CUDA.cu
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/Metal/: ITMDepthTracker_Metal.h  ITMDepthTracker_Metal.mm
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/: ITMDepthTracker_OpenCL.cpp  ITMDepthTracker_OpenCL.h  ITMSceneReconstructionEngine_OpenCL.cpp  ITMSceneReconstructionEngine_OpenCL.h  ITMSceneReconstructionEngine_OpenCL_knobs.h  ITMSceneReconstructionEngine_OpenCL_knobs.h.template.180  ITMSceneReconstructionEngine_OpenCL_knobs.h.template.240  ITMSceneReconstructionEngine_OpenCL_knobs.h.template.all_algos  ITMSceneReconstructionEngine_OpenCL_knobs.h.template.combined_icp  ITMSceneReconstructionEngine_OpenCL_knobs.h.template.raycast  ITMVisualisationEngine_OpenCL.cpp  ITMVisualisationEngine_OpenCL.h  IntegrateIntoSceneData.h  README.md  example.cl  generate.sh  integrate.h
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Combined/: .gitignore
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Combined/benchmarks/: .gitignore
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Combined/scripts/: 1_generate_params.py  3_estimateResults.py  4_parseEstimations.py  6_extractArea.py
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Combined/src/: ITMSceneReconstructionEngine_OpenCL.cl  ITMSceneReconstructionEngine_OpenCL_knobs.h  ITMSceneReconstructionEngine_OpenCL_knobs.h.template
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/: .gitignore  optimizations.txt
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/baseline_without_interp/: .gitignore  ITMSceneReconstructionEngine_OpenCL.cl  ITMSceneReconstructionEngine_OpenCL_knobs.h
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/benchmarks/: .gitignore
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/current/: .gitignore  ITMSceneReconstructionEngine_OpenCL.cl  ITMSceneReconstructionEngine_OpenCL_knobs.h
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/results/: big.txt  fpga_results.csv  small.txt
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/scripts/: 1_generate_params.py  3_estimateResults.py  5_compileFull.py  6_extractArea.py  progress.sh
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/ICP/src/: ITMSceneReconstructionEngine_OpenCL.cl  ITMSceneReconstructionEngine_OpenCL_knobs.h  ITMSceneReconstructionEngine_OpenCL_knobs.h.template
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Raycasting/: .gitignore
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Raycasting/benchmarks/: .gitignore
src/InfiniTAM/ITMLib/Engine/DeviceSpecific/OpenCL/de1/Raycasting/scripts/: .gitignore  (+5 more)
src/InfiniTAM/ITMLib/Objects/: ITMIMUMeasurement.h  ITMLocalVBA.h  ITMRenderState.h  ITMRenderState_VH.h  ITMTrackingState.h  ITMVoxelBlockHash.h
src/InfiniTAM/ITMLib/Utils/: ITMLibDefines.h  ITMLibSettings.cpp  ITMLibSettings.h
src/InfiniTAM/ORUtils/: Android.mk  CMakeLists.txt  MemoryBlock.h  OpenCLContext.cpp  OpenCLContext.h  Quaternion.h
src/InfiniTAM/Utils/: Android.mk  CMakeLists.txt  DataWriter.cpp  DataWriter.h  NVTimer.h  TangoImages.cpp  TangoImages.h  UdpClient.cpp  UdpClient.h
src/InfiniTAM/android/jni/: Android.mk
src/InfiniTAM/cmake/: FindOpenCL.cmake
src/InfiniTAM/studio/: import-summary.txt  local.properties
src/InfiniTAM/studio/app/: build.gradle
src/InfiniTAM/studio/app/src/main/: AndroidManifest.xml
src/InfiniTAM/studio/app/src/main/jni/: Android.mk  Application.mk  DataBuffer.h  InfiniTAMApp.cpp  InfiniTAMApp.h  JavaMethods.cpp  JavaMethods.h  TouchHandler.cpp  TouchHandler.h  bionic  jniExport.cpp  jniTango.cpp  logging.h  tangoMain.cpp  tangoMain.h  tango_client_api  tango_support_api
src/InfiniTAM/studio/app/src/main/res/layout/: mainscreen.xml  options_dialog.xml
src/InfiniTAM/studio/app/src/main/res/values/: strings.xml
src/ReadData/: CMakeLists.txt  README.md
src/ReadData/cmake/: CUDACheckCompute.cmake  FindOpenCL.cmake  FindOpenNI.cmake  FindRealSense.cmake  UseOpenMP.cmake  cuda_compute_capability.c
src/ReadData/include/: linux_timer.h  logging.h
src/ReadData/include/unsupported/Eigen/src/IterativeSolvers/: DGMRES.h  Scaling.h
src/ReadData/scripts/: .gitignore  all_ate.sh  calculate_ate.sh  compile.sh  evaluate_ate.py  fake_fpga_results.csv  merge_data.py  opencl_config.ini  opencl_config_de1.ini  parse_stdout.py  plotDesignSpaces.py  plotGraphs.py  plotGraphs.sh  processAll.sh  processPoses.py  processTiming.py  program_config.ini  program_config_de1.ini  run_experiments.py
src/ReadData/src/: InfiniTAMServer.cpp  InfiniTAMServer.h  PointCloudNetworkGetter.cpp  PointCloudNetworkGetter.h  SimpleConfig.h  TangoData.cpp  TangoData.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  backup  colorize.hpp  depth_map.hpp  infinitam_knobs.py  infinitam_params.txt  main.cpp  utils.h
src/ReadData/tools/: CMakeLists.txt  colors.cpp
(+66 files in other folders)
